# FRCScoutingAnalyzer

./: .gitignore  CMakeLists.txt  README.md  ScoutingAnalyzer.pro  datasetpage.cpp  datasetpage.h  main.cpp  mainwindow.cpp  mainwindow.h  teamdata.h  util.h
assets/: ScoutingAnalyzer.desktop  databreakdown  datasets.txt  sortoptions
src/: CMakeLists.txt  alliancedata.h  datasetpage.cpp  datasetpage.h  main.cpp  mainwindow.cpp  mainwindow.h  qwidgetwithclick.h  teamdata.h  util.h
src/qcustomplot/: qcustomplot.h
